added computer vision feature

--- a/docBot/appsettings.json
+++ b/docBot/appsettings.json
@@ -1,4 +1,8 @@
 {
   "MicrosoftAppId": "",
-  "MicrosoftAppPassword": ""
+  "MicrosoftAppPassword": "",
+  "botFilePath": "ImageProcessingBot.bot",
+  "botFileSecret": "",
+  "computerVisionKey": "7cb6c636b9644d0983339ff108ef9b2d",
+  "computerVisionEndpoint": "https://westeurope.api.cognitive.microsoft.com/"
 }
