image processing using ms cognitive services feature

--- a/docBot/appsettings.json
+++ b/docBot/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "MicrosoftAppId": "",
-  "MicrosoftAppPassword": "",
+  "MicrosoftAppId": "48573e4c-bded-41d6-b572-274486258cdf",
+  "MicrosoftAppPassword": "Uy_6q[gbrH}tEi29EN(ptgiO?l3BXS",
   "botFilePath": "ImageProcessingBot.bot",
   "botFileSecret": "",
   "computerVisionKey": "7cb6c636b9644d0983339ff108ef9b2d",
